hero-text-1 and hero-text-2 were exceeding screen width for mobile displays. Corrected the width. Whitespace to the right side of homepage fixed.

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-html {
+html,
+body {
   overflow-x: hidden;
 }
 
@@ -117,6 +118,7 @@ html {
 /* Hero Section Start */
 
 #hero-section {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -2300,10 +2302,8 @@ html {
 
   #hero-text-1 {
     text-align: left;
-    width: 25rem;
     position: absolute;
     color: #ffffff;
-    backdrop-filter: blur(0);
     left: 3rem;
     top: 15rem;
     font-size: 2.5rem;
@@ -2312,10 +2312,8 @@ html {
 
   #hero-text-2 {
     text-align: left;
-    width: 25rem;
     position: absolute;
     color: #ffffff;
-    backdrop-filter: blur(0);
     left: 3rem;
     top: 18rem;
     display: flex;
